@@ -4,6 +4,8 @@
 
 Gora Change Log
 
+* GORA-239 Add null checks and better message in AccumuloStore (David Medinets via hsaputra)
+
 0.3 release: 05/03/2013 (mm/dd/yyyy)
 Release Report: https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311172&version=12317954
 
